tests/ui/g-control-user-kind-message-bound.stderr
error[E0277]: the trait bound `ControlMsg<40, MyControl>: Message` is not satisfied
 --> tests/ui/g-control-user-kind-message-bound.rs:8:29
  |
8 |     let _ = g::send::<1, 1, g::ControlMsg<40, MyControl>>();
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Message` is not implemented for `ControlMsg<40, MyControl>`
  |
  = help: the following other types implement trait `Message`:
            ControlMsg<LOGICAL_LABEL, LoopBreak>
            ControlMsg<LOGICAL_LABEL, LoopContinue>
            ControlMsg<LOGICAL_LABEL, StateRestore>
            ControlMsg<LOGICAL_LABEL, StateSnapshot>
            ControlMsg<LOGICAL_LABEL, TopologyAck>
            ControlMsg<LOGICAL_LABEL, TopologyBegin>
            ControlMsg<LOGICAL_LABEL, TopologyCommit>
            ControlMsg<LOGICAL_LABEL, TxnAbort>
            ControlMsg<LOGICAL_LABEL, TxnCommit>
note: required by a bound in `send`
 --> src/g.rs
  |
  | pub const fn send<const FROM: u8, const TO: u8, M>() -> Program<Send<FROM, TO, M>>
  |              ---- required by a bound in this function
  | where
  |     M: Message,
  |        ^^^^^^^ required by this bound in `send`
